elastic/apm/apm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apm
  labels:
    app: apm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apm
  template:
    metadata:
      labels:
        app: apm
    spec:
      containers:
        - name: apm
          image: elastic/apm-server:8.7.0
          args:
            - -e
            - -E
            - output.elasticsearch.hosts=http://elasticsearch:9200
          resources: {}
      restartPolicy: Always
