elastic/apm/apm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apm
  labels:
    app: apm
spec:
  selector:
    app: apm
  ports:
    - port: 8200
      targetPort: 8200
